# discrimads

./: .gitignore  LICENSE  README.md  pyproject.toml  requirements.txt
data/: meta_content.parquet  meta_img_ocr.csv  sample_content.parquet  tiktok_sample.parquet
docs/: videos.drawio
notebooks/: some_utils.ipynb  videoframes2gender.ipynb
src/discrimads/: classify.py  download.py  extract_audio.py  extract_frames.py  extract_meta.py  gender_audio.py  main.py  occupation.py  ocr.py  ocr_meta_photos.py  sample_tiktok.py  tiktok_client.py  transcription.py  util.py
